ThingSpeak ajustado. Muestra luminosidad, temperatura y humedad en tiempo real

--- a/ThingSpeak-SHT85-Display/ThingSpeak-SHT85-Display.ioc
+++ b/ThingSpeak-SHT85-Display/ThingSpeak-SHT85-Display.ioc
@@ -8,25 +8,28 @@ KeepUserPlacement=false
 Mcu.CPN=STM32F411VET6
 Mcu.Family=STM32F4
 Mcu.IP0=I2C1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=USART2
-Mcu.IPNb=5
+Mcu.IP1=I2C2
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=USART2
+Mcu.IPNb=6
 Mcu.Name=STM32F411V(C-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC0
 Mcu.Pin1=PC1
-Mcu.Pin10=VP_SYS_VS_Systick
+Mcu.Pin10=PB6
+Mcu.Pin11=PB7
+Mcu.Pin12=VP_SYS_VS_Systick
 Mcu.Pin2=PC2
 Mcu.Pin3=PC3
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
 Mcu.Pin6=PC4
 Mcu.Pin7=PC5
-Mcu.Pin8=PB6
-Mcu.Pin9=PB7
-Mcu.PinsNb=11
+Mcu.Pin8=PB10
+Mcu.Pin9=PB3
+Mcu.PinsNb=13
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
@@ -50,6 +53,16 @@ PA2.Signal=USART2_TX
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PB10.GPIOParameters=GPIO_Pu
+PB10.GPIO_Pu=GPIO_PULLUP
+PB10.Locked=true
+PB10.Mode=I2C
+PB10.Signal=I2C2_SCL
+PB3.GPIOParameters=GPIO_Pu
+PB3.GPIO_Pu=GPIO_PULLUP
+PB3.Locked=true
+PB3.Mode=I2C
+PB3.Signal=I2C2_SDA
 PB6.GPIOParameters=GPIO_Pu
 PB6.GPIO_Pu=GPIO_PULLUP
 PB6.Locked=true
@@ -103,7 +116,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true
 RCC.48MHZClocksFreq_Value=12500000
 RCC.AHBFreq_Value=50000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
