--- a/ThingSpeak-SHT85-Display/ThingSpeak-SHT85-Display.ioc
+++ b/ThingSpeak-SHT85-Display/ThingSpeak-SHT85-Display.ioc
@@ -11,30 +11,35 @@ Mcu.IP0=I2C1
 Mcu.IP1=I2C2
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=USART2
-Mcu.IPNb=6
+Mcu.IP4=SPI1
+Mcu.IP5=SYS
+Mcu.IP6=USART2
+Mcu.IPNb=7
 Mcu.Name=STM32F411V(C-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC0
 Mcu.Pin1=PC1
-Mcu.Pin10=PB6
-Mcu.Pin11=PB7
-Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin10=PC4
+Mcu.Pin11=PC5
+Mcu.Pin12=PB10
+Mcu.Pin13=PB3
+Mcu.Pin14=PB6
+Mcu.Pin15=PB7
+Mcu.Pin16=VP_SYS_VS_Systick
 Mcu.Pin2=PC2
 Mcu.Pin3=PC3
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
-Mcu.Pin6=PC4
-Mcu.Pin7=PC5
-Mcu.Pin8=PB10
-Mcu.Pin9=PB3
-Mcu.PinsNb=13
+Mcu.Pin6=PA4
+Mcu.Pin7=PA5
+Mcu.Pin8=PA6
+Mcu.Pin9=PA7
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
-MxCube.Version=6.13.0
-MxDb.Version=DB.6.0.130
+MxCube.Version=6.14.0
+MxDb.Version=DB.6.0.140
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -53,6 +58,17 @@ PA2.Signal=USART2_TX
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA4.GPIOParameters=GPIO_Speed,PinState
+PA4.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA4.Locked=true
+PA4.PinState=GPIO_PIN_SET
+PA4.Signal=GPIO_Output
+PA5.Mode=Full_Duplex_Master
+PA5.Signal=SPI1_SCK
+PA6.Mode=Full_Duplex_Master
+PA6.Signal=SPI1_MISO
+PA7.Mode=Full_Duplex_Master
+PA7.Signal=SPI1_MOSI
 PB10.GPIOParameters=GPIO_Pu
 PB10.GPIO_Pu=GPIO_PULLUP
 PB10.Locked=true
@@ -88,6 +104,7 @@ PC5.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
+ProjectManager.CompilerLinker=GCC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
@@ -116,7 +133,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true
 RCC.48MHZClocksFreq_Value=12500000
 RCC.AHBFreq_Value=50000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -152,10 +169,14 @@ RCC.VCOInputFreq_Value=2000000
 RCC.VCOInputMFreq_Value=3200000
 RCC.VCOOutputFreq_Value=100000000
 RCC.VcooutputI2S=320000000
+SPI1.CalculateBaudRate=25.0 MBits/s
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualType=VM_MASTER
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=STM32F411E-DISCO
 boardIOC=true
-isbadioc=false
