--- a/ThingSpeak-SHT85-Display/ThingSpeak-SHT85-Display.ioc
+++ b/ThingSpeak-SHT85-Display/ThingSpeak-SHT85-Display.ioc
@@ -25,13 +25,15 @@ Mcu.Pin11=PC5
 Mcu.Pin12=PB10
 Mcu.Pin13=PD12
 Mcu.Pin14=PD14
-Mcu.Pin15=PB3
-Mcu.Pin16=PB5
-Mcu.Pin17=PB6
-Mcu.Pin18=PB7
-Mcu.Pin19=VP_FATFS_VS_Generic
+Mcu.Pin15=PA13
+Mcu.Pin16=PA14
+Mcu.Pin17=PB3
+Mcu.Pin18=PB5
+Mcu.Pin19=PB6
 Mcu.Pin2=PC2
-Mcu.Pin20=VP_SYS_VS_Systick
+Mcu.Pin20=PB7
+Mcu.Pin21=VP_FATFS_VS_Generic
+Mcu.Pin22=VP_SYS_VS_Systick
 Mcu.Pin3=PC3
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
@@ -39,7 +41,7 @@ Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
 Mcu.Pin9=PA7
-Mcu.PinsNb=21
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
@@ -57,6 +59,10 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+PA13.Mode=Serial_Wire
+PA13.Signal=SYS_JTMS-SWDIO
+PA14.Mode=Serial_Wire
+PA14.Signal=SYS_JTCK-SWCLK
 PA2.Locked=true
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
@@ -128,7 +134,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
@@ -145,43 +151,43 @@ ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_FATFS_Init-FATFS-false-HAL-false
-RCC.48MHZClocksFreq_Value=12500000
-RCC.AHBFreq_Value=50000000
-RCC.APB1CLKDivider=RCC_HCLK_DIV4
-RCC.APB1Freq_Value=12500000
-RCC.APB1TimFreq_Value=25000000
-RCC.APB2Freq_Value=50000000
-RCC.APB2TimFreq_Value=50000000
-RCC.CortexFreq_Value=50000000
-RCC.EthernetFreq_Value=50000000
-RCC.FCLKCortexFreq_Value=50000000
+RCC.48MHZClocksFreq_Value=20000000
+RCC.AHBFreq_Value=80000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV2
+RCC.APB1Freq_Value=40000000
+RCC.APB1TimFreq_Value=80000000
+RCC.APB2Freq_Value=80000000
+RCC.APB2TimFreq_Value=80000000
+RCC.CortexFreq_Value=80000000
+RCC.EthernetFreq_Value=80000000
+RCC.FCLKCortexFreq_Value=80000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=50000000
+RCC.HCLKFreq_Value=80000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=320000000
 RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SM,PLLI2SN,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
-RCC.MCO2PinFreq_Value=50000000
-RCC.PLLCLKFreq_Value=50000000
+RCC.MCO2PinFreq_Value=80000000
+RCC.PLLCLKFreq_Value=80000000
 RCC.PLLI2SM=5
 RCC.PLLI2SN=200
 RCC.PLLM=8
-RCC.PLLN=50
+RCC.PLLN=80
 RCC.PLLQ=8
-RCC.PLLQCLKFreq_Value=12500000
+RCC.PLLQCLKFreq_Value=20000000
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
-RCC.SYSCLKFreq_VALUE=50000000
+RCC.SYSCLKFreq_VALUE=80000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.VCOI2SOutputFreq_Value=640000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOInputMFreq_Value=3200000
-RCC.VCOOutputFreq_Value=100000000
+RCC.VCOOutputFreq_Value=160000000
 RCC.VcooutputI2S=320000000
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
-SPI1.CalculateBaudRate=6.25 MBits/s
+SPI1.CalculateBaudRate=10.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
