--- a/ThingSpeak-SHT85-Display/ThingSpeak-SHT85-Display.ioc
+++ b/ThingSpeak-SHT85-Display/ThingSpeak-SHT85-Display.ioc
@@ -20,28 +20,29 @@ Mcu.Name=STM32F411V(C-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC0
 Mcu.Pin1=PC1
-Mcu.Pin10=PC4
-Mcu.Pin11=PC5
-Mcu.Pin12=PB10
-Mcu.Pin13=PD12
-Mcu.Pin14=PD14
-Mcu.Pin15=PA13
-Mcu.Pin16=PA14
-Mcu.Pin17=PB3
-Mcu.Pin18=PB5
-Mcu.Pin19=PB6
+Mcu.Pin10=PA7
+Mcu.Pin11=PC4
+Mcu.Pin12=PC5
+Mcu.Pin13=PB10
+Mcu.Pin14=PD12
+Mcu.Pin15=PD14
+Mcu.Pin16=PA13
+Mcu.Pin17=PA14
+Mcu.Pin18=PB3
+Mcu.Pin19=PB5
 Mcu.Pin2=PC2
-Mcu.Pin20=PB7
-Mcu.Pin21=VP_FATFS_VS_Generic
-Mcu.Pin22=VP_SYS_VS_Systick
+Mcu.Pin20=PB6
+Mcu.Pin21=PB7
+Mcu.Pin22=VP_FATFS_VS_Generic
+Mcu.Pin23=VP_SYS_VS_Systick
 Mcu.Pin3=PC3
-Mcu.Pin4=PA2
-Mcu.Pin5=PA3
-Mcu.Pin6=PA4
-Mcu.Pin7=PA5
-Mcu.Pin8=PA6
-Mcu.Pin9=PA7
-Mcu.PinsNb=23
+Mcu.Pin4=PA1
+Mcu.Pin5=PA2
+Mcu.Pin6=PA3
+Mcu.Pin7=PA4
+Mcu.Pin8=PA5
+Mcu.Pin9=PA6
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
@@ -59,6 +60,8 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+PA1.Locked=true
+PA1.Signal=GPIO_Output
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
