--- a/TFG_VersionUnificada/TFG_VersionUnificada.ioc
+++ b/TFG_VersionUnificada/TFG_VersionUnificada.ioc
@@ -18,14 +18,20 @@ Mcu.Name=STM32F411V(C-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PH0 - OSC_IN
 Mcu.Pin1=PH1 - OSC_OUT
-Mcu.Pin2=PB10
-Mcu.Pin3=PC6
-Mcu.Pin4=PC7
-Mcu.Pin5=PB3
-Mcu.Pin6=PB6
-Mcu.Pin7=PB7
-Mcu.Pin8=VP_SYS_VS_Systick
-Mcu.PinsNb=9
+Mcu.Pin10=PC7
+Mcu.Pin11=PB3
+Mcu.Pin12=PB6
+Mcu.Pin13=PB7
+Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin2=PC0
+Mcu.Pin3=PC1
+Mcu.Pin4=PC2
+Mcu.Pin5=PC3
+Mcu.Pin6=PC4
+Mcu.Pin7=PC5
+Mcu.Pin8=PB10
+Mcu.Pin9=PC6
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
@@ -55,6 +61,18 @@ PB6.Signal=I2C1_SCL
 PB7.Locked=true
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
+PC0.Locked=true
+PC0.Signal=GPIO_Output
+PC1.Locked=true
+PC1.Signal=GPIO_Output
+PC2.Locked=true
+PC2.Signal=GPIO_Output
+PC3.Locked=true
+PC3.Signal=GPIO_Output
+PC4.Locked=true
+PC4.Signal=GPIO_Output
+PC5.Locked=true
+PC5.Signal=GPIO_Output
 PC6.Mode=Asynchronous
 PC6.Signal=USART6_TX
 PC7.Mode=Asynchronous
@@ -85,8 +103,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=STM32CubeIDE
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=esp_test.ioc
-ProjectManager.ProjectName=esp_test
+ProjectManager.ProjectFileName=TFG_VersionUnificada.ioc
+ProjectManager.ProjectName=TFG_VersionUnificada
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
@@ -95,7 +113,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART6_UART_Init-USART6-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART6_UART_Init-USART6-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true
 RCC.48MHZClocksFreq_Value=25000000
 RCC.AHBFreq_Value=100000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
